[gi] Convert GErrors to GObject.GError exceptions, and throw them upon returning from calling the C function.

This changes gi to make use of pyglib_error_check() which already exists in pyglib.

The included tests make use of the other patch attached to this bug, to check that the right exception is thrown from the new function in GIMarshallingTests.
two Gtk C functions.

https://bugzilla.gnome.org/show_bug.cgi?id=639834